--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP</title>
     <link rel="stylesheet" href="./resources/css/styles.css">
+    <link rel="icon" href="./resources/images/logo_AP.PNG">
 </head>
 <body>
     <h1>Hello my name is Aryan Patel</h1>
