--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP</title>
+    <title>Aryan Patel | Personal Website</title>
     <link rel="stylesheet" href="./resources/css/styles.css">
     <link rel="icon" href="./resources/images/logo_AP.PNG">
 </head>
