--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,22 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-90Y8EB9MW9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-90Y8EB9MW9");
+    </script>
     <!--
+
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
